<resources>
    <string name="app_name">ToDoList</string>
    <string name="welcome_message">Welcome to Tech Archlight ToDo list App</string>
    <string name="urgent">Urgent?</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="enter_to_do_item_here">Enter to do item here</string>
    <string name="item_name_text">Item name</string>
    <string name="item_urgency_text">Item urgency</string>
    <string name="add_item_message">add item message</string>
    <string name="edit_item_message">edit item message</string>
    <string name="today_s_items">Today\'s items</string>
    <string name="previous_items">previous items</string>
    <string name="date">date</string>
</resources>