<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<!--    <?xml version="1.0" encoding="utf-8"?>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddItemActivity">


        <TextView
            android:id="@+id/tv_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="120dp"
            android:gravity="center"
            android:text="@string/add_item_message"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:ems="10"
            android:hint="@string/enter_to_do_item_here"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Title" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="129dp"
            android:layout_height="36dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="42dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="@+id/tv_Title"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintStart_toStartOf="@+id/editTextItem"
            app:layout_constraintTop_toBottomOf="@+id/editTextItem">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urgent"
                android:textSize="20dp"
                tools:layout_editor_absoluteX="109dp"
                tools:layout_editor_absoluteY="288dp" />

            <CheckBox
                android:id="@+id/cbUrgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                tools:layout_editor_absoluteX="183dp"
                tools:layout_editor_absoluteY="242dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:text="@string/save"
            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
            app:layout_constraintStart_toStartOf="@+id/btnCancel"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:onClick="saveItemAction"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="97dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSave"
            android:onClick="cancelAction"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>