<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<!--    <?xml version="1.0" encoding="utf-8"?>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:longClickable="true"
        app:layout_constraintEnd_toEndOf="@+id/item_name_text_view"
        app:layout_constraintStart_toEndOf="@+id/item_name_text_view">

        <TextView
            android:id="@+id/item_name_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/item_name_text"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_urgency_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_urgency_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="@string/item_urgency_text"
            android:textColor="#f00"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/date"
            app:layout_constraintStart_toEndOf="@+id/item_name_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="20sp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="#555"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_urgency_text_view"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>